Add more notes for additions to site

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,6 @@
 /* 3: Maybe the notes could be added to the completed tasks like for a more indepth description of tasks */
 /* 4: Expand the tasks list to beyond just a day. Maybe a day/week/month type deal */
 /* 5: Possibly add animation to make less of a flat site, with check marks for compelete or better break down of tasks as completed */
-/* 6 Figure out why prettier requires the smart a an errors out the regular ' markings. Take a deeper dive into functionality of envoking prettier */
+/* 6: Add more to notes like a clear or submit section. As on now it just sits there as is with no purpose of action. */
+/* 7: Maybe have the whole tasks list once completed can be stored or emailed of some sort of record to look back on, but that requires storage with a back end */
+/* 8: Figure out why prettier requires the smart a an errors out the regular ' markings. Take a deeper dive into functionality of envoking prettier */
