--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgba(248, 248, 245, 0.738);
+    margin: 2rem;
 }
 
 h1 {
@@ -12,3 +13,11 @@ h1 {
 }
 
 
+#mb3 {
+    
+    background: rgba(113, 218, 247, 0.459);
+    color: rgb(5, 5, 5);
+    padding: 2rem;
+    border: 2px solid rgb(251, 248, 248);
+    border-radius: 9%;
+}
