--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,19 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgba(248, 248, 245, 0.738);
     margin: 2rem;
 }
 
+
+h2,
+h3,
+h4,
+h5,
+#date {
+    color: rgba(245, 248, 247, 0.868);
+}
+
 h1 {
+    color: rgba(248, 248, 245, 0.738);
     text-decoration: underline;
     text-decoration-color: rgba(113, 218, 247, 0.571);
     text-decoration-thickness: .6rem;
@@ -12,12 +21,26 @@ h1 {
     margin-block: 2.5rem;
 }
 
+h6 {
+    color: rgba(113, 218, 247, 0.600);
+}
+
+#date {
+    background: rgba(113, 218, 247, 0.314);
+    padding: .7rem;
+    border: 2px solid rgb(251, 248, 248);
+    border-radius: 9%;
+}
 
 #mb3 {
-    
-    background: rgba(113, 218, 247, 0.459);
+    background: rgba(113, 218, 247, 0.314);
     color: rgb(5, 5, 5);
     padding: 2rem;
     border: 2px solid rgb(251, 248, 248);
     border-radius: 9%;
+    box-shadow: 5px 5px 5px 3px rgba(245, 245, 245, 0.53);
+}
+
+#mb3:hover {
+    background: #06060608;
 }
